--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
+    "braintree": "^3.11.0",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
-    "graphql": "^15.8.0",
+    "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
+    "graphql-upload": "^15.0.2",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "lodash": "^4.17.21",
@@ -30,6 +32,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "path": "^0.12.7",
+    "paypal-rest-sdk": "^1.8.1",
     "uuid": "^8.3.2",
     "winston": "^3.6.0"
   },
