--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "description": "",
   "dependencies": {
     "@graphql-tools/schema": "^8.3.6",
+    "@tensorflow/tfjs-node": "^3.19.0",
     "apollo-server": "^3.6.7",
     "apollo-server-express": "^3.6.7",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "braintree": "^3.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.3",
-    "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
     "graphql": "^16.5.0",
     "graphql-request": "^4.2.0",
